--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
     "lint": "eslint \"**/*.{js,ts}\"",
     "lint-fix": "eslint --fix \"**/*.{js,ts}\"",
     "prepare": "husky install",
-    "pkgwin": "pkg . -t node14-win-x64 -C GZip -o bin/app --no-bytecode",
-    "pkglinux": "pkg . -t node14-linux-x64 -C GZip -o bin/app --no-bytecode",
-    "pkgmacos": "pkg . -t node14-macos-x64 -C GZip -o bin/app --no-bytecode"
+    "pkgwin": "pkg . -t node16-win-x64 -C GZip -o bin/app --no-bytecode",
+    "pkglinux": "pkg . -t node16-linux-x64 -C GZip -o bin/app --no-bytecode",
+    "pkgmacos": "pkg . -t node16-macos-x64 -C GZip -o bin/app --no-bytecode",
+    "install": "npm install --registry=https://registry.npmjs.org/"
   },
   "bin": "./app.js",
   "pkg": {
@@ -41,7 +42,7 @@
   "main": "main.js",
   "types": "./interface.d.ts",
   "engines": {
-    "node": ">=12"
+    "node": ">=16"
   },
   "lint-staged": {
     "*.js": [
@@ -78,20 +79,20 @@
     "@types/express": "^4.17.13",
     "@types/express-fileupload": "^1.2.2",
     "@types/mocha": "^9.1.0",
-    "@types/node": "16.11.19",
-    "@typescript-eslint/eslint-plugin": "5.0.0",
-    "@typescript-eslint/parser": "5.0.0",
-    "eslint": "8.7.0",
-    "eslint-config-prettier": "8.5.0",
-    "eslint-plugin-html": "7.1.0",
-    "eslint-plugin-prettier": "4.0.0",
-    "husky": "7.0.4",
-    "intelli-espower-loader": "1.1.0",
-    "lint-staged": "12.1.7",
-    "mocha": "10.0.0",
+    "@types/node": "^16.11.19",
+    "@typescript-eslint/eslint-plugin": "^5.0.0",
+    "@typescript-eslint/parser": "^5.0.0",
+    "eslint": "^8.7.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-html": "^7.1.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "husky": "^7.0.4",
+    "intelli-espower-loader": "^1.1.0",
+    "lint-staged": "^12.1.7",
+    "mocha": "^10.0.0",
     "pkg": "^5.8.0",
-    "power-assert": "1.6.1",
-    "prettier": "2.7.1",
-    "typescript": "4.5.2"
+    "power-assert": "^1.6.1",
+    "prettier": "^2.7.1",
+    "typescript": "^4.5.2"
   }
 }
